# rayevolve

./: .gitignore  README.md  mkdocs.yml  mmt_cluster.sh  pyproject.toml  raytree.py  raytree_async.py  raytree_notifier.py  raytree_permit.py  zensical.toml
.github/workflows/: docs.yaml
configs/: config.yaml
configs/cluster/: gcp.yaml  local.yaml  remote.yaml
configs/database/: island_circle.yaml  island_large.yaml  island_medium.yaml  island_small.yaml
configs/evolution/: circle_budget.yaml  large_budget.yaml  medium_budget.yaml  small_budget.yaml
configs/task/: agent_design.yaml  circle_packing.yaml  circle_packing_scipy.yaml  creditcard.yaml  graphsearch.yaml  novelty_generator.yaml  uci_adult.yaml
configs/variant/: agent_design_example.yaml  circle_packing_example.yaml  circle_packing_scipy_example.yaml  creditcard.yaml  default.yaml  graphsearch.yaml  novelty_generator_example.yaml  uci_adult.yaml
docs/: api.md  index.md
examples/CO-Bench/: .gitignore  clean_data.py  cobench_utils.py  dl_data.py  setup_data.py
examples/CO-Bench/bin_packing/: config.py  evaluate.py  main.py  pyproject.toml
examples/CO-Bench/flow_shop/: config.py  evaluate.py  main.py  pyproject.toml
examples/CO-Bench/tsp/: config.py  evaluate.py  main.py  pyproject.toml
examples/CO-Bench__TSP/: .gitignore  config.py  evaluate.py  main.py  pyproject.toml  setup_data.py
examples/CO-Bench__aircraft_landing/: .gitignore  config.py  evaluate.py  main.py  pyproject.toml
examples/CO-Bench__flow_shop/: config.py  evaluate.py  main.py  pyproject.toml
examples/FrontierCO/: README.md  dl_data.py
examples/FrontierCO/CFLP/: config.py  evaluate.py  main.py  orig.py  pyproject.toml
examples/FrontierCO/CPMP/: config.py  evaluate.py  main.py  (+2 more)
examples/FrontierCO__CFLP/: .gitignore  config.py  evaluate.py  main.py  pyproject.toml  setup_data.py
examples/circle_packing/: config.py  evaluate.py  initial.py  main.py  pyproject.toml  run_evo.py  viz_circles.ipynb
examples/graphsearch/: baseline_eval_env.py  config.py  evaluate.py  generate_graphs.py  initial.py  main.py  pyproject.toml
examples/uci_adult/: X_train.csv  config.py  evaluate.py  initial.py  main.py  pyproject.toml  y_train.csv  y_val.csv
notebooks/: comparison_figures.ipynb  pixi.toml
ray_ideas/: raytree_notifier.py  raytree_permit.py  raytree_simplified.py
src/rayevolve/: __init__.py  eval_hydra.py  launch_hydra.py  run.py
(+156 files in other folders)
