[project]
name = "rayevolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zia Khan", email = "zkhan@alumni.princeton.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "anthropic",
    "requests",
    "boto3",
    "backoff",
    "python-dotenv",
    "instructor",
    "python-Levenshtein",
    "unidiff",
    "dill",
    "hydra-core==1.3.2",
    "matplotlib",
    "networkx",
    "seaborn",
    "moviepy",
    "scikit-learn",
    "adjustText",
    "markdown",
    "aiofiles",
    "google-generativeai",
    "ray[default]>=2.9.1",
    "debugpy>=1.8.0",
    "pydantic-ai>=1.23.0",
    "typer>=0.12.0",
    "pyarrow>=17.0.0",
]

[project.scripts]
rayevolve = "rayevolve:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
